--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "jest-fetch-mock": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -22,6 +25,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "linters:fix": "npx stylelint \"**/*.{css,scss}\" --fix && npx eslint \"**/*.{js,jsx}\" --fix"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   },
   "eslintConfig": {
     "extends": [
